Changes: pull in widgetsgallery when installing the benchmarks
RevBy: TrustMe

--- a/debian/control
+++ b/debian/control
@@ -150,7 +150,7 @@ Description: libdui unit tests
 Package: libdui-benchmarks
 Section: extra
 Architecture: any
-Depends: libdui0 (= ${Source-Version}), ${shlibs:Depends}
+Depends: libdui0 (= ${Source-Version}), ${shlibs:Depends}, dui-demos-widgetsgallery
 Description: libdui benchmarks
  Benchmarking binaries for testing libdui library
 
