Changes: Disabling plainqt plugin packaging for now
RevBy: TrustMe
Details: Causing problems for dui apps at the moment, needs
to be investigated

--- a/debian/rules
+++ b/debian/rules
@@ -59,7 +59,7 @@ configure-stamp:
 	dh_testdir
 
 	mkdir -p $(BUILD_DIR)
-	cd $(BUILD_DIR) && ../configure --prefix=/usr -release -make "tests plainqt benchmarks" $(OPTIONS)
+	cd $(BUILD_DIR) && ../configure --prefix=/usr -release -make "tests benchmarks" $(OPTIONS)
 
 	touch configure-stamp
 
